--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@docusaurus/preset-classic": "^3.4.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^1.2.1",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
+    "path": "^0.12.7",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
@@ -27,6 +30,7 @@
     "@docusaurus/module-type-aliases": "^3.4.0",
     "@docusaurus/tsconfig": "^3.4.0",
     "@docusaurus/types": "^3.4.0",
+    "snipsync": "^1.10.0",
     "typescript": "~5.2.2"
   },
   "browserslist": {
