--- a/snipsync.config.yaml
+++ b/snipsync.config.yaml
@@ -2,6 +2,9 @@ origins:
   - owner: resonatehq
     repo: examples-ts
     ref: main
+  - owner: resonatehq
+    repo: examples-py
+    ref: main
   - files:
       pattern: ./docs/get-started/typescript-quickstart/part-1/code/src/**.ts
       owner: resonatehq
