--- a/vercel.json
+++ b/vercel.json
@@ -59,6 +59,16 @@
       "source": "/evaluate/why-resonate-hq",
       "destination": "/evaluate/why-resonate",
       "permanent": true
+    },
+    {
+      "source": "/get-started/python-quickstart/part-1",
+      "destination": "/get-started/python-quickstart",
+      "permanent": true
+    },
+    {
+      "source": "/get-started/server-installation",
+      "destination": "/get-started/server-quickstart",
+      "permanent": true
     }
   ]
 }
