part-3 in python, typescript restructure

--- a/docs/get-started/python-quickstart/code/part-3/pyproject.toml
+++ b/docs/get-started/python-quickstart/code/part-3/pyproject.toml
@@ -13,7 +13,8 @@ readme = "README.md"
 requires-python = ">= 3.12"
 
 [project.scripts]
-    "app-node" = "summarize.gateway:main"
+    "app-node-1" = "summarize.app_node_1:main"
+    "app-node-2" = "summarize.app_node_2"
 
 [build-system]
 requires = ["hatchling"]
