--- a/vercel.json
+++ b/vercel.json
@@ -69,6 +69,16 @@
       "source": "/get-started/server-installation",
       "destination": "/get-started/server-quickstart",
       "permanent": true
+    },
+    {
+      "source": "get-started/typescript-quickstart/part-1",
+      "destination": "/get-started/typescript-quickstart",
+      "permanent": true
+    },
+    {
+      "source": "get-started/typescript-quickstart/part-2",
+      "destination": "/get-started/typescript-quickstart",
+      "permanent": true
     }
   ]
 }
