Python SDK quickstart tutorial parts 2-5, refactor TypeScript quickstart tutorial, move Python tutorial code to examples repo

--- a/vercel.json
+++ b/vercel.json
@@ -77,7 +77,7 @@
     },
     {
       "source": "get-started/typescript-quickstart/part-2",
-      "destination": "/get-started/typescript-quickstart",
+      "destination": "/get-started/typescript-quickstart#part-2-durable-execution",
       "permanent": true
     }
   ]
