--- a/snipsync.config.yaml
+++ b/snipsync.config.yaml
@@ -11,17 +11,7 @@ origins:
       repo: docs
       ref: main
   - files:
-      pattern: ./docs/get-started/python-quickstart/code/part-1/src/**/**.py
-      owner: resonatehq
-      repo: docs
-      ref: main
-  - files:
       pattern: ./docs/get-started/typescript-quickstart/code/part-2/src/**.ts
-      owner: resonatehq
-      repo: docs
-      ref: main
-  - files:
-      pattern: ./docs/get-started/python-quickstart/code/part-2/src/**/**.py
       owner: resonatehq
       repo: docs
       ref: main
@@ -31,5 +21,5 @@ targets:
   - docs/get-started/python-quickstart/
   - docs/develop
 
-allowed_target_extensions: [.md]
+allowed_target_extensions: [".md", "mdx"]
 enable_code_dedenting: false
