updates to tutorials and evaluation content

--- a/vercel.json
+++ b/vercel.json
@@ -71,13 +71,18 @@
       "permanent": true
     },
     {
-      "source": "get-started/typescript-quickstart/part-1",
+      "source": "/get-started/typescript-quickstart/part-1",
       "destination": "/get-started/typescript-quickstart",
       "permanent": true
     },
     {
-      "source": "get-started/typescript-quickstart/part-2",
+      "source": "/get-started/typescript-quickstart/part-2",
       "destination": "/get-started/typescript-quickstart#part-2-durable-execution",
+      "permanent": true
+    },
+    {
+      "source": "/evaluate/system-components",
+      "destination": "/evaluate/system-architecture",
       "permanent": true
     }
   ]
