how it works page

--- a/vercel.json
+++ b/vercel.json
@@ -1,98 +1,8 @@
 {
   "redirects": [
     {
-      "source": "/category/getting-started",
-      "destination": "/get-started",
-      "permanent": true
-    },
-    {
-      "source": "/getting-started/quickstart",
-      "destination": "/get-started",
-      "permanent": true
-    },
-    {
-      "source": "/getting-started/concepts",
-      "destination": "/concepts",
-      "permanent": true
-    },
-    {
-      "source": "/category/sdks",
-      "destination": "/develop",
-      "permanent": true
-    },
-    {
-      "source": "/sdks/typescript",
-      "destination": "/develop/typescript",
-      "permanent": true
-    },
-    {
-      "source": "/category/resonate-server",
-      "destination": "/operate",
-      "permanent": true
-    },
-    {
-      "source": "/resonate/overview",
-      "destination": "/get-started",
-      "permanent": true
-    },
-    {
-      "source": "/resonate/deployment",
-      "destination": "/operate/kubernetes-server-deployment",
-      "permanent": true
-    },
-    {
-      "source": "/resonate/observability",
-      "destination": "/operate/server-observability",
-      "permanent": true
-    },
-    {
-      "source": "/resonate/architecture",
-      "destination": "/operate/server-architecture",
-      "permanent": true
-    },
-    {
-      "source": "/resonate/error-codes",
-      "destination": "/operate/server-errors",
-      "permanent": true
-    },
-    {
-      "source": "/evaluate/why-resonate-hq",
-      "destination": "/evaluate/why-resonate",
-      "permanent": true
-    },
-    {
-      "source": "/get-started/python-quickstart/part-1",
-      "destination": "/get-started/python-quickstart",
-      "permanent": true
-    },
-    {
-      "source": "/get-started/server-installation",
-      "destination": "/get-started/server-quickstart",
-      "permanent": true
-    },
-    {
-      "source": "/get-started/typescript-quickstart/part-1",
-      "destination": "/get-started/typescript-quickstart",
-      "permanent": true
-    },
-    {
-      "source": "/get-started/typescript-quickstart/part-2",
-      "destination": "/get-started/typescript-quickstart#part-2-durable-execution",
-      "permanent": true
-    },
-    {
-      "source": "/evaluate/system-components",
-      "destination": "/evaluate/system-architecture",
-      "permanent": true
-    },
-    {
-      "source": "/evaluate/features/sequential-programming-model",
-      "destination": "/evaluate/developer-experience/sequential-programming-model",
-      "permanent": true
-    },
-    {
-      "source": "/evaluate/features/incremental-adoption",
-      "destination": "/evaluate/developer-experience/incremental-adoption",
+      "source": "/evaluate/system-architecture",
+      "destination": "/evaluate/how-it-works",
       "permanent": true
     }
   ]
